--- a/css/styles.css
+++ b/css/styles.css
@@ -161,7 +161,7 @@ align-items:center;
 
 }
 
-.logo-studio {
+.logo-web__studio {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     color: var(--logo-studio-up);
