--- a/css/styles.css
+++ b/css/styles.css
@@ -1,280 +1,25 @@
 
-/* Обнуление отступов */
-/* html{ */
-    /* box-sizing: border-box; */
-/* } */
-/*  */
-/* *,  */
-/* *::before, */
-/* *::after{ */
-    /* box-sizing: inherit; */
-/* } */
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-ul{
-    margin: 0;
-    padding: 0;
-}
-body{
-font-family: 'Roboto', sans-serif;
-background: var(--bg-body-color)
-}
-
-/* =----------------------OTHER----------------- */
-
-.list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-a {
-    text-decoration: none;
-}
-/* Head */
-
 .nav-element:hover,
-/* FooTer */
+
 .adress-place:hover,
 .adress:hover { 
-    color: var(--link-active);
+color: var(--link-active);
 } 
 
-.logo:hover .logo__studio , .logo:focus .logo__studio{
-color: var(--link-active);
-}
 
 
 
 
 .contacts .contact:hover,.contacts .contact:focus {
-    color: var(--link-active);
-    fill: var(--link-active);
+color: var(--link-active);
+fill: var(--link-active);
 }
 
-
-
-
-/* Head */
 .nav-element:focus,
-/* FooTer */
 .adress-place:focus,
-.adress:focus,
-.logo:focus {
+.adress:focus{
 color: var(--link-active);
 }
-
-
-
-
-
-
-
-
-
-:root{
-    
-    --logo-color:#2196F3;
-    --logo-studio:#000000;
-    --logo-studio-inverse: #FFFFFF;
-
-    --nav-color:#212121;
-    --contacts-color:#757575;
-
-    --button-text-color:#FFFFFF;
-    --button-active-color:#188CE8;
-    --button-color:#2196F3;
-    --link-active:#2196F3;
-    --adress-contact-color:rgba(255, 255, 255, 0.6);
-    --adress-place-color:#FFFFFF;
-    --bg-footer-color:#2F303A;
-    --bg-body-color:#FFFFFF;
-    --bg-hero-color:#2F303A;
-    --bg-team-color:#F5F4FA;
-    --bg-feature-color: #F5F4FA;
-    --bg-taam-card-color:#fff;
-    --h-hero-color:#FFFFFF;
-    --h-what-color:#212121;
-    --h-team-color:#212121;
-    --team-name-color:#212121;
-    --team-dsk-color:#757575;
-    --feature-list-h:#212121;
-    --feature-dsk:#757575;
-    --nav-line:#ECECEC;
-
-    --icon-color:#AFB1B8;
-/* colors of portfolio */
-    --project-bg-btn:#F5F4FA;
-    --project-border-btn:#F5F4FA;
-    --project-btn-text:#212121;
-    --project-btn-active-text:#FFFFFF;
-    --project-card-border:#EEEEEE;
-    --project-card-h:#212121;
-    --project-card-dsk:#757575;
-
-
-
-    --space-card:30px;
-}
-/* --------------Header --------------*/
-.container {
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-.section{
-padding-top: 94px;
-padding-bottom: 94px;
-}
-.head-border {
-border-bottom: 1px solid var(--nav-line);
-
-}
-
-.container-head {
-    display: flex;
-    align-items: center;
-}
-
-/* --------------NAVIGATION  --------------*/
-.navigation{
-display: flex;
-align-items:center;
-}
-
-/* --------------LOGO --------------*/
-.logo {
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: var(--logo-color);
-    margin-right: 93px;
-}
-.logo__studio {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: var(--logo-studio);
-}
-.logo:hover .logo__studio,
-.logo:focus .logo__studio {
-    color: var(--link-active);
-}
-
-
-.nav-list {
-    display: flex;
-}
-
-
-.nav-element{
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--nav-color);
-  
-    
-}
-
-.nav-list>.li-nav {
-    margin-left: 50px;
-    
- 
-}
-
-.nav-list>.li-nav:first-child {
-    margin-left: 0;
-}
-
-
-
-
-.current {
-    padding-top: 32px;
-        padding-bottom: 32px;
-
-color: var(--link-active);
-position: relative
-
-}
-.current::after{
-content: "";
-display: block;
-left: 0;
-bottom: 0;
-position: absolute;
-
-width:100%;
-height: 4px;
-
-background-color: var(--link-active);
-border-radius: 2px;
-
-}
-
-/* --------------CONTACTS --------------*/
-.contacts {
-display: flex;
-margin-left: auto;
-
-/* grid-gap: 30px; */
-}
-.li-contact>a{
-padding-top: 32px;
-padding-bottom: 32px;
-}
-.contacts .contact{
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-
-    text-decoration: none;
-    color: var(--contacts-color);
-    fill: var(--contacts-color);
-}
-
-.icon-maill{
-/* height: 12px; */
-/* width: 16px; */
-fill: inherit;
-margin-right: 10px;
-}
-.icon-tell{
-/* height: 16px; */
-/* width: 10px; */
-fill: inherit;
-margin-right: 10px;
-}
-.li-contact {
-    display: flex;
-    margin-left: 50px;
-}
-
-.li-contact:first-child {
-    margin-left: 0;
-}
-
-
-/*---------- MAIN-----------*/
 
 /* Section PORTFOLIO --*/
 
@@ -419,490 +164,6 @@ letter-spacing: 0.03em;
 color: var(--project-card-dsk);
 }
 
-
-/*--------Section  HERO STUDIO--------*/
-
-.hero-section {
-
-padding: 200px 0;
-text-align: center;
-
-background-color: #AFB1B8;
-background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),url(../images/hero-fon-min.jpg) ;
-
-/* background-attachment: fixed; */
-background-position: center;
-background-repeat: no-repeat;
-background-size: 1600px auto;
-
-
-}
-
-.hero-heading{
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-color: var(--h-hero-color);
-width: 696px;
-margin-left: auto;
-margin-right: auto;
-margin-bottom: 30px;
-}
-
-
-/* -------BUTTON-------- */
-
-.button {
-border-radius: 4px;
-min-width: 240px;
-/* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
-padding: 10px 35.6px;
-background-color: var(--button-color);
-border: none;
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.8;
-letter-spacing: 0.06em;
-color: var(--button-text-color);
-
-cursor: pointer;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover{
-    background-color: var(--button-active-color)
-}
-
-
-/*   ------------Our feature ------------- */
-
-.features-section {
-    padding-bottom: 0;
-}
-/*  feature heading hidden*/
-.hidden {
-color: rgba(0, 0, 0, 0);
-position: absolute;
-width: 1px;
-height: 1px;
-margin: -1px;
-border: 0;
-padding: 0;
-white-space: nowrap;
-clip-path: inset(100%);
-clip: rect(0 0 0 0);
-overflow: hidden;
-}
-
-/* feature  list OTHER*/
-/* Контейнер с прймуществами */
-
-.features{
-display: flex;
-
-}
-
-/* feature  card*/  
-
-
-.feature-card {
-    display: block;
-    width:calc((100%/4)-(3*var(--space-card))) ;
-   
-    margin-left: var(--space-card);
-}
-.feature-card:first-child{
-    margin-left: 0;
-}
-
-.bord-feature {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 120px;
-
-    margin-bottom: 30px;
-
-    border-radius: 4px;
-    background-color: var(--bg-feature-color);
-}
-
-/* .icon-feature { */
-    /* display: block; */
-    /* height: 70px; */
-    /* width: 70px; */
-
-/* } */
-.feature-list-heading{
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-margin: 0;
-margin-bottom: 10px;
-text-transform: uppercase;
-color: var(--feature-list-h);
-}
-
-.feature-list-description{
-font-weight: 400;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
-color: var(--feature-dsk);
-margin:  0px;
-}
-
-    /* --------What do we do? ---------*/
-
-
-
-.what-heading{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--h-what-color);
-margin: 0;
-margin-bottom: 50px;
-}
-
-
-.what-list-other {
-display: flex;
-}
-
-.what-card{
-    margin-left: var(--space-card);
-    width: calc((100%/3)-(2*var(--space-card)));
-    position: relative;
-
-    /* transition: transform 500ms linear; */
-   
-}
-
-.what-card:first-child{
-    margin-left: 0;
-    align-items: center;
-}
-
-
-.img-what {
-width: 100%;
-display: block;
-
-}
-
-.what-descriptions{
-position: absolute;
-bottom: 0;
-left: 50%;
-transform: translateX(-50%);
-display: inline-block;
-width: 100%;
-padding-bottom: 27px;
-padding-top: 27px;
-
-
-     font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-
-
-    background-color: rgba(47, 48, 58, 0.8);
-
-    
-}
-/*-------------- OUR TEAM---------------*/
-
-.our-team{
- background-color: var(--bg-team-color);
-}
-
-.our-team-heading{
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
-color:var(--h-team-color) ;
-
-margin-bottom: 50px;
-}
-
-
-.our-team-list{
-display: flex;
-}
-
-
- .team-card{
-flex-direction: column ;
-background-color: var(--bg-taam-card-color);
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
-width: calc((100%/4)-(3*var(--space-card)));
-margin-left: var(--space-card);
- }
-
-.team-card:first-child {
-    margin-left: 0;
-
-}
- /*-------- Images--------*/
-.imag-team{
-  width: 100%;
- display: block;
- 
-}
-
-.container-team{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 0;
-   
-   
-}
-
-.team-name{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.187;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--team-name-color);
-    margin: 0 0 10px;
-}
-
-.our-team-profession {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.187;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--team-dsk-color);
-    margin: 0;
-}
-
-.social-list{
-    display: flex;
-   
-    
-    margin-top: 16px;
-}
-
-.social-li{
-    margin-left: 10px;
-}
-
-.social-li:first-child {
-    margin-left: 0;
-   
-}
-
-.social-li>a{
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-display: flex;
-justify-content: center;
-align-items: center;
-height: 44px;
-width: 44px;
-border-radius: 50%;
-fill: var(--icon-color);
-}
-
-.social-li>a:hover,.social-li>a:focus{
-background-color:var(--link-active) ;
-fill: #fff;
-}
-
-.icon-social{
-    display: block;
-    /* height: 20px; */
-    /* width: 20px; */
-    fill: inherit;
-}
-
-
-
-/* Our Clients */
-
-.header-clients{
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-}
-
-.container>.clients-list{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-   
-}
-
-
-.clients-list>.client{
-display: block;
-width: calc((100%/6)-(5*var(--space-card)));
-/* margin-right: 30px; */
-
-}
-/* .clients-list>.client:last-child { */
-    /* margin-right: 0; */
-/* } */
-
-.link-client{
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 92px;
-    width: 170px;
-
-    border: 1px solid var(--icon-color);
-    border-radius: 4px;
-
-    fill:var(--icon-color) ;
-
-}
-.link-client:hover,.link-client:focus{
-   
-    fill:var(--link-active);
-    border:1px solid var(--link-active);
-}
-
-
-
-
-.client-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60px;
-    width: 106px;
-}
-
-
-
-
-
-.icon-clien{
-    height: 60px;
-}
-
-/* -------------FOOTER-------------- */
-
-.footer {
-    background-color: var(--bg-footer-color);
-    padding: 60px 0px;
-}
-.footer>.container{
-    display: flex;
-    align-items: baseline;
-}
-
-.footer-list {
-    display: flex;
-    flex-direction: column;
-min-width:fit-content;
-}
-
-
-
-
-.logo--footer {
-margin-bottom: 20px;
-}
-.logo__studio--inverse{
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-color: var(--logo-studio-inverse);
-}
-.logo:hover .logo__studio--inverse,
-.logo:focus .logo__studio--inverse {
-    color: var(--link-active);
-}
-
-
-.footer-addres{
-    padding-right: 25px;
-}
-.adress-list{
-display: block;
-margin-bottom: 9px;
-height: 21px; 
-}
-.adress-list:last-child{
-    margin-bottom: 0;
-}
-
-.adress-place{
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
-color: var(--adress-place-color)
-}
-
-.adress{
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: var(--adress-contact-color);
-}
-
-.footer-social{
-    margin-left: 70px;
-}
-.footer-social>.social-list{
-    margin: 0;
-}
-.footer-social>h3{
-font-weight: 700;
-font-size: 14px;
-line-height: 16px;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: #FFFFFF;
-
-margin-bottom: 20px;
-}
- .footer-social .icon-social{
-    fill: #FFFFFF;
- }
- .footer-social a{
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
- }
-
- .footer-social a:hover,footer-social a:focus{
-     background-color: var(--link-active);
- }
 
 /* M-is MODAL */
 
