--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 @import "./components/_modal-button.scss";
 @import "./components/_social-links-list.scss";
 @import "./components/logo";
+@import "./components/backdrop";
+@import "./components/modal";
 
 @import "./layout/_heder.scss";
 @import "./layout/_hero.scss";
