--- a/sass/layout/_heder.scss
+++ b/sass/layout/_heder.scss
@@ -62,7 +62,7 @@ border-radius: 2px;
     padding-bottom: 32px;
 }
 
-.contacts .contact {
+.contact {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     display: flex;
@@ -76,6 +76,13 @@ border-radius: 2px;
     text-decoration: none;
     color: var(--contacts-color);
     fill: var(--contacts-color);
+}
+.nav-element:focus,
+.nav-element:hover,
+.contact:hover,
+.contact:focus {
+    color: var(--link-active);
+    fill: var(--link-active);
 }
 
 .icon-maill ,.icon-tell {
