--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,7 +17,7 @@
 @import "./layout/_our-clients.scss";
 @import "./layout/footer";
 
-@import "./pages/_pages.scss";
+@import "./pages/portfolio";
 
 @import "./themes/_themes.scss";
 @import "./vendors/_vendors.scss";
