--- a/css/main.css
+++ b/css/main.css
@@ -1112,4 +1112,155 @@ a {
 .submit-subscription:hover,
 .submit-subscription:focus {
   background-color: var(--button-active-color);
+}
+
+/* Section PORTFOLIO --*/
+/* BUTTONS PORTFOLIO */
+.nav-projects {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  grid-gap: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+}
+
+.button-portfolio {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: auto;
+  min-height: 38px;
+  min-width: 73px;
+  border-radius: 4px;
+  border: var(--project-border-btn);
+  padding: 6px 22px;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--project-btn-text);
+  cursor: pointer;
+  background: var(--project-bg-btn);
+}
+
+.button-portfolio:hover {
+  background-color: var(--button-color);
+  color: var(--project-btn-active-text);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.button-portfolio:focus {
+  background-color: var(--button-color);
+  color: var(--project-btn-active-text);
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+/* LIST OUR PROJECTS PORTFOLIO*/
+.project-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.img-project {
+  display: block;
+  width: 100%;
+}
+
+.project-card {
+  width: calc(33.3333333333% - 2 * var(--space-card));
+  margin-left: var(--space-card);
+  margin-bottom: var(--space-card);
+}
+
+.project-card:nth-child(3n+1) {
+  margin-left: 0;
+}
+
+.project-card:nth-last-of-type(-n+3) {
+  margin-bottom: 0;
+}
+
+.link-project {
+  display: block;
+}
+
+.link-project:hover,
+.link-project:focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.thumb-img-project {
+  position: relative;
+  text-align: left;
+  overflow: hidden;
+}
+
+.description-hover {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 63px;
+  padding-bottom: 63px;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.link-project:hover .description-hover,
+.link-project:focus .description-hover {
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+}
+
+.card-text {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+  border-left: 1px solid var(--project-card-border);
+  border-right: 1px solid var(--project-card-border);
+  border-bottom: 1px solid var(--project-card-border);
+}
+
+.project-heading {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--project-card-h);
+  margin-bottom: 4px;
+}
+
+.project-descriotion {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  color: var(--project-card-dsk);
 }/*# sourceMappingURL=main.css.map */
