--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,6 @@ a {
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .button:hover {
   background-color: var(--button-active-color);
 }
@@ -208,9 +207,7 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--logo-studio);
 }
-
-.logo:hover .logo__studio,
-.logo:focus .logo__studio {
+.logo:hover .logo__studio, .logo:focus .logo__studio {
   color: var(--link-active);
 }
 
@@ -223,9 +220,7 @@ a {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: var(--logo-studio-inverse);
 }
-
-.logo:hover .logo__studio--inverse,
-.logo:focus .logo__studio--inverse {
+.logo:hover .logo__studio--inverse, .logo:focus .logo__studio--inverse {
   color: var(--link-active);
 }
 
@@ -240,7 +235,6 @@ a {
   -webkit-transition: opacity 250ms ease, visibility 500ms ease;
   transition: opacity 250ms ease, visibility 500ms ease;
 }
-
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -264,7 +258,6 @@ a {
   transition: transform 250ms linear;
   transition: transform 250ms linear, -webkit-transform 250ms linear;
 }
-
 .backdrop.is-hidden .modal {
   -webkit-transform: translate(-50%, -50%) scale(1.15);
           transform: translate(-50%, -50%) scale(1.15);
@@ -292,9 +285,7 @@ a {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.close:focus,
-.close:hover {
+.close:focus, .close:hover {
   fill: var(--link-active);
 }
 
@@ -343,6 +334,9 @@ a {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #212121;
 }
+.field:hover + .icon-field, .field:focus + .icon-field {
+  fill: var(--link-active);
+}
 
 .field {
   width: 100%;
@@ -358,6 +352,9 @@ a {
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.field:hover, .field:focus {
+  border: 1px solid #2196F3;
+}
 
 .textarea {
   display: block;
@@ -368,7 +365,6 @@ a {
   padding-left: 16px;
   padding-right: 16px;
 }
-
 .textarea::-webkit-input-placeholder {
   font-weight: 400;
   font-size: 12px;
@@ -376,7 +372,6 @@ a {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .textarea::-moz-placeholder {
   font-weight: 400;
   font-size: 12px;
@@ -384,7 +379,6 @@ a {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .textarea:-ms-input-placeholder {
   font-weight: 400;
   font-size: 12px;
@@ -392,7 +386,6 @@ a {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .textarea::-ms-input-placeholder {
   font-weight: 400;
   font-size: 12px;
@@ -400,23 +393,12 @@ a {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
 .textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
-}
-
-.field:hover + .icon-field,
-.field:focus + .icon-field {
-  fill: var(--link-active);
-}
-
-.field:hover,
-.field:focus {
-  border: 1px solid #2196F3;
 }
 
 .checkbox {
@@ -429,31 +411,6 @@ a {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 30px;
-}
-
-.label-checkbox::before {
-  content: "";
-  display: block;
-  height: 15px;
-  width: 16px;
-  margin-right: 7px;
-  border-radius: 2px;
-  border: 2px solid #000000;
-  cursor: pointer;
-  background-image: url(../images/checkbox.svg);
-  background-repeat: no-repeat;
-  background-size: content;
-  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.imput-checkbox:checked + .label-checkbox::before {
-  background-color: var(--link-active);
-  border: 2px solid var(--link-active);
-}
-
-.imput-checkbox:focus + .label-checkbox::before {
-  border: 2px solid var(--link-active);
 }
 
 .label-checkbox {
@@ -469,7 +426,28 @@ a {
   letter-spacing: 0.03em;
   color: #757575;
 }
-
+.label-checkbox::before {
+  content: "";
+  display: block;
+  height: 15px;
+  width: 16px;
+  margin-right: 7px;
+  border-radius: 2px;
+  border: 2px solid #000000;
+  cursor: pointer;
+  background-image: url(../images/checkbox.svg);
+  background-repeat: no-repeat;
+  background-size: content;
+  -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.imput-checkbox:checked + .label-checkbox::before {
+  background-color: var(--link-active);
+  border: 2px solid var(--link-active);
+}
+.imput-checkbox:focus + .label-checkbox::before {
+  border: 2px solid var(--link-active);
+}
 .label-checkbox > a {
   font-weight: 400;
   font-size: 14px;
@@ -484,28 +462,26 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 52px;
+  padding-right: 52px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   text-align: center;
   letter-spacing: 0.06em;
   color: #FFFFFF;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 52px;
-  padding-right: 52px;
   background-color: var(--button-color);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.modal-submit:hover,
-.modal-submit:focus {
+.modal-submit:hover, .modal-submit:focus {
   background-color: var(--button-active-color);
 }
 
