--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -9,11 +9,12 @@
      background-color: rgba(0, 0, 0, 0.2);
      opacity: 1;
      transition: opacity 250ms ease, visibility 500ms ease;
-     ;
+
+        &.is-hidden {
+            opacity: 0;
+            visibility: hidden;
+            pointer-events: none;
+        }
  }
 
- .backdrop.is-hidden {
-     opacity: 0;
-     visibility: hidden;
-     pointer-events: none;
- }
+
