--- a/sass/components/_modal-button.scss
+++ b/sass/components/_modal-button.scss
@@ -14,8 +14,11 @@
 
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover {
+        background-color: var(--button-active-color)
+    }
 }
 
-.button:hover {
-    background-color: var(--button-active-color)
-}
+
+
