--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -12,11 +12,12 @@
 
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms linear;
+
+        .backdrop.is-hidden & {
+            transform: translate(-50%, -50%) scale(1.15);
+        }
 }
 
-.backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(1.15);
-}
 
 .close {
     position: absolute;
@@ -35,12 +36,17 @@
     cursor: pointer;
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus,
+    &:hover {
+        fill: var(--link-active)
+    }
 }
 
-.close:focus,
-.close:hover {
-    fill: var(--link-active)
-}
+
+
+
+
 
 .form-header {
     display: block;
@@ -85,6 +91,11 @@
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: #212121;
+
+    .field:hover + &,
+    .field:focus + & {
+        fill: var(--link-active);
+    }
 }
 
 .field {
@@ -102,6 +113,10 @@
 
 
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        border: 1px solid #2196F3;
+        }
 }
 
 .textarea {
@@ -114,30 +129,14 @@
     padding-left: 16px;
     padding-right: 16px;
 
+    &::placeholder {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.01em;
+        color: rgba(117, 117, 117, 0.5);
+    }
 }
-
-.textarea::placeholder {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
-}
-
-
-
-
-.field:hover+.icon-field,
-.field:focus+.icon-field {
-
-    fill: var(--link-active);
-}
-
-.field:hover,
-.field:focus {
-    border: 1px solid #2196F3;
-}
-
 
 .checkbox {
     display: flex;
@@ -147,34 +146,6 @@
     margin-top: 20px;
     margin-bottom: 30px;
 
-}
-
-.label-checkbox::before {
-
-    content: "";
-    display: block;
-    height: 15px;
-    width: 16px;
-    margin-right: 7px;
-    border-radius: 2px;
-    border: 2px solid #000000;
-    cursor: pointer;
-
-    background-image: url(../images/checkbox.svg);
-    background-repeat: no-repeat;
-    background-size: content;
-
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.imput-checkbox:checked+.label-checkbox::before {
-    background-color: var(--link-active);
-    border: 2px solid var(--link-active);
-
-}
-
-.imput-checkbox:focus+.label-checkbox::before {
-    border: 2px solid var(--link-active);
 }
 
 .label-checkbox {
@@ -187,25 +158,53 @@
     letter-spacing: 0.03em;
 
     color: #757575;
+
+    &::before {
+        content: "";
+        display: block;
+        height: 15px;
+        width: 16px;
+        margin-right: 7px;
+        border-radius: 2px;
+        border: 2px solid #000000;
+        cursor: pointer;
+    
+        background-image: url(../images/checkbox.svg);
+        background-repeat: no-repeat;
+        background-size: content;
+    
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .imput-checkbox:checked + &::before {
+        background-color: var(--link-active);
+        border: 2px solid var(--link-active);
+    
+    }
+    
+    .imput-checkbox:focus + &::before {
+        border: 2px solid var(--link-active);
+    }
+    &>a {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.5;
+        letter-spacing: 0.03em;
+        text-decoration-line: underline;
+    
+        color: #2196F3;
+    }
 }
 
-.label-checkbox>a {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.5;
-    letter-spacing: 0.03em;
-    text-decoration-line: underline;
-
-    color: #2196F3;
-}
 
 .modal-submit {
     display: block;
     margin-left: auto;
     margin-right: auto;
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 52px;
+    padding-right: 52px;
 
     font-weight: 700;
     font-size: 16px;
@@ -214,20 +213,16 @@
     letter-spacing: 0.06em;
     color: #FFFFFF;
 
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 52px;
-    padding-right: 52px;
-
-
     background-color: var(--button-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border: none;
     cursor: pointer;
-}
 
-.modal-submit:hover,
-.modal-submit:focus {
-    background-color: var(--button-active-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
+    &:hover,
+    &:focus {
+        background-color: var(--button-active-color);
+    }
 }
